--- a/Semester 4/Numerik/W05/V5.ipynb
+++ b/Semester 4/Numerik/W05/V5.ipynb
@@ -13,6 +13,23 @@
    "id": "ec7a95bc058028ce"
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-17T15:25:19.646426Z",
+     "start_time": "2025-03-17T15:25:18.846326Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import math"
+   ],
+   "id": "b1ceca2721f33554",
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
@@ -139,8 +156,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-17T09:36:27.090494Z",
-     "start_time": "2025-03-17T09:36:27.087554Z"
+     "end_time": "2025-03-17T15:27:50.537985Z",
+     "start_time": "2025-03-17T15:27:50.536057Z"
     }
    },
    "cell_type": "code",
@@ -169,7 +186,7 @@
    ],
    "id": "9b7ea639a37f5ff5",
    "outputs": [],
-   "execution_count": 38
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -210,6 +227,202 @@
     }
    ],
    "execution_count": 41
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Aufgabe 4\n",
+    "\n",
+    "Gegeben sei die Funktion f durch f(x) = x · ln(x^2) − 1.\n",
+    "Gesucht ist ihre Nullstelle im Intervall I = [1, 2]."
+   ],
+   "id": "2d65a0505de529fe"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-17T15:33:56.096867Z",
+     "start_time": "2025-03-17T15:33:56.094401Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def f_x(x):\n",
+    "    y = x * np.log(x**2) - 1\n",
+    "    return y\n",
+    "\n",
+    "def f_x_derivative(x):\n",
+    "    return np.log(x**2) + 2"
+   ],
+   "id": "a91c29ad7ee9b410",
+   "outputs": [],
+   "execution_count": 14
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Zeigen Sie, dass f in I das Vorzeichen wechselt und es daher eine\n",
+    "Nullstelle in I geben muss. (Hinweis: siehe Bisektion)"
+   ],
+   "id": "fd33be194709b370"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-17T15:39:34.145346Z",
+     "start_time": "2025-03-17T15:39:34.143706Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print( f_x(1), f_x(2) )",
+   "id": "72578dabcf7e4c06",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1.0 1.7725887222397811\n",
+      "0.21639532432449315\n"
+     ]
+    }
+   ],
+   "execution_count": 24
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Führen Sie in Python das Newtonverfahren mit Startwert x0 = 1.5 durch.\n",
+    "Nach wie vielen Iterationsschritten ist das Residuum betragsmässig kleiner als 10^(−12)?\n"
+   ],
+   "id": "6a40c358d7897c11"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-17T15:37:37.868287Z",
+     "start_time": "2025-03-17T15:37:37.866348Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "x = 1.5\n",
+    "tol = 10e-12\n",
+    "k = 0\n",
+    "res = abs(f_x(x))\n",
+    "while res > tol:\n",
+    "    x = x - f_x(x)/f_x_derivative(x)\n",
+    "    res = abs(f_x(x))\n",
+    "    k=k+1\n",
+    "    print( x, res, k )\n"
+   ],
+   "id": "885b4982f0aba1c8",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4230164722424972 0.0040203565938801145 1\n",
+      "1.421530510046655 1.5522326535233333e-06 2\n",
+      "1.4215299358832023 2.3159252293680765e-13 3\n"
+     ]
+    }
+   ],
+   "execution_count": 22
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Bestimmen Sie mit dem Newton-Verfahren nach dem Muster der vorhergehenden Aufgabe die Nullstelle von\n",
+    "f(x) = − ln(x−1)−cos(x−1) im Intervall [1.2, 1.6]."
+   ],
+   "id": "7e877fb520443d83"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-17T15:48:00.442096Z",
+     "start_time": "2025-03-17T15:48:00.440254Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def f_x(x):\n",
+    "    y = -np.log(x-1) - np.cos(x-1)\n",
+    "    return y\n",
+    "\n",
+    "def f_x_derivative(x):\n",
+    "    y = -1/(x-1) + np.sin(x-1)\n",
+    "    return y"
+   ],
+   "id": "e169b6c27aa5dab4",
+   "outputs": [],
+   "execution_count": 32
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-17T15:48:07.302175Z",
+     "start_time": "2025-03-17T15:48:07.299436Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print( f_x(1.2), f_x(1.6) )",
+   "id": "af3f010170720168",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6293713345928589 -0.3145099911436877\n"
+     ]
+    }
+   ],
+   "execution_count": 33
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-17T15:48:39.216069Z",
+     "start_time": "2025-03-17T15:48:39.213506Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "x = 1.2\n",
+    "tol = 10e-12\n",
+    "k = 0\n",
+    "res = abs(f_x(x))\n",
+    "while res > tol:\n",
+    "    x = x - f_x(x)/f_x_derivative(x)\n",
+    "    res = abs(f_x(x))\n",
+    "    k=k+1\n",
+    "    print( x, res, k )\n"
+   ],
+   "id": "da0a16baf917e1e",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.3310826889365397 0.15969616797302044 1\n",
+      "1.3903319764177 0.015974885053048893 2\n",
+      "1.3976551138633282 0.00019859483293449554 3\n",
+      "1.3977484611172741 3.156496564127309e-08 4\n",
+      "1.3977484759587466 7.771561172376096e-16 5\n"
+     ]
+    }
+   ],
+   "execution_count": 34
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "9f7c58e1197aa85f"
   }
  ],
  "metadata": {
