--- a/Semester 4/Dat Eng 2/DE2_Lab06/DE2_Lab06.ipynb
+++ b/Semester 4/Dat Eng 2/DE2_Lab06/DE2_Lab06.ipynb
@@ -39,10 +39,26 @@
      "nuid": "3d3d6b21-a378-4317-8742-7cfa8a647d19",
      "inputWidgets": {},
      "title": ""
+    },
+    "ExecuteTime": {
+     "end_time": "2025-04-27T12:56:39.779277Z",
+     "start_time": "2025-04-27T12:56:39.605913Z"
     }
    },
-   "outputs": [],
-   "execution_count": 0
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'graphframes'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 3\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m# Import graphframes into the libaries of your cluster (take the jar of the zip archive)\u001B[39;00m\n\u001B[0;32m----> 3\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mgraphframes\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;241m*\u001B[39m\n\u001B[1;32m      4\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mpyspark\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01msql\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mfunctions\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m desc\n\u001B[1;32m      5\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mseaborn\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mexternal\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mdocscrape\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m header\n",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'graphframes'"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -364,6 +380,11 @@
    "language": "python",
    "widgets": {},
    "notebookOrigID": 1511417866088479
+  },
+  "kernelspec": {
+   "name": "python3",
+   "language": "python",
+   "display_name": "Python 3 (ipykernel)"
   }
  },
  "nbformat": 4,
