--- a/Semester 4/Numerik/W02/P2.ipynb
+++ b/Semester 4/Numerik/W02/P2.ipynb
@@ -88,8 +88,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-24T15:23:25.318698Z",
-     "start_time": "2025-02-24T15:23:25.316045Z"
+     "end_time": "2025-06-14T16:24:33.923093Z",
+     "start_time": "2025-06-14T16:24:33.486624Z"
     }
    },
    "cell_type": "code",
@@ -99,13 +99,13 @@
    ],
    "id": "649aee0896264176",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-24T15:24:13.183756Z",
-     "start_time": "2025-02-24T15:24:13.142729Z"
+     "end_time": "2025-06-14T16:24:34.668809Z",
+     "start_time": "2025-06-14T16:24:34.585445Z"
     }
    },
    "cell_type": "code",
@@ -116,7 +116,7 @@
     "    return 1 - np.cos(x)\n",
     "\n",
     "x = (np.linspace(-0.5*10**-7, 0.5*10**-7, 400))\n",
-    "plt.plot(vec, f(x))\n",
+    "plt.plot(x, f(x))\n",
     "plt.show()\n"
    ],
    "id": "2cc0fd3b311e551d",
@@ -132,7 +132,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 14
+   "execution_count": 3
   },
   {
    "metadata": {},
