--- a/Semester 4/Numerik/W05/V5.ipynb
+++ b/Semester 4/Numerik/W05/V5.ipynb
@@ -93,8 +93,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-17T09:30:16.863386Z",
-     "start_time": "2025-03-17T09:30:16.859878Z"
+     "end_time": "2025-06-14T16:29:18.107743Z",
+     "start_time": "2025-06-14T16:29:18.104438Z"
     }
    },
    "cell_type": "code",
@@ -151,13 +151,13 @@
      ]
     }
    ],
-   "execution_count": 34
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-17T15:27:50.537985Z",
-     "start_time": "2025-03-17T15:27:50.536057Z"
+     "end_time": "2025-06-14T16:30:14.794499Z",
+     "start_time": "2025-06-14T16:30:14.791641Z"
     }
    },
    "cell_type": "code",
@@ -186,7 +186,7 @@
    ],
    "id": "9b7ea639a37f5ff5",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -197,8 +197,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-17T10:11:31.657790Z",
-     "start_time": "2025-03-17T10:11:31.655765Z"
+     "end_time": "2025-06-14T16:31:36.414046Z",
+     "start_time": "2025-06-14T16:31:36.412071Z"
     }
    },
    "cell_type": "code",
@@ -211,7 +211,7 @@
     "    x = 0.5*(x+3/x)\n",
     "    res = abs(3-x**2)\n",
     "    k=k+1\n",
-    "    print( x, res, k )"
+    "    print( k, x, res )"
    ],
    "id": "81234e68ded80e52",
    "outputs": [
@@ -219,14 +219,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.75 0.0625 1\n",
-      "1.7321428571428572 0.00031887755102077975 2\n",
-      "1.7320508100147274 8.47267322967582e-09 3\n",
-      "1.7320508075688772 4.440892098500626e-16 4\n"
+      "1 1.75 0.0625\n",
+      "2 1.7321428571428572 0.00031887755102077975\n",
+      "3 1.7320508100147274 8.47267322967582e-09\n",
+      "4 1.7320508075688772 4.440892098500626e-16\n"
      ]
     }
    ],
-   "execution_count": 41
+   "execution_count": 4
   },
   {
    "metadata": {},
