--- a/Semester 4/Numerik/W06/P6.ipynb
+++ b/Semester 4/Numerik/W06/P6.ipynb
@@ -12,8 +12,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-03-24T13:54:44.782379Z",
-     "start_time": "2025-03-24T13:54:44.536897Z"
+     "end_time": "2025-06-14T16:42:55.638566Z",
+     "start_time": "2025-06-14T16:42:55.414726Z"
     }
    },
    "source": [
@@ -32,8 +32,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-24T13:54:45.616952Z",
-     "start_time": "2025-03-24T13:54:45.613110Z"
+     "end_time": "2025-06-14T16:43:04.164865Z",
+     "start_time": "2025-06-14T16:43:04.161821Z"
     }
    },
    "cell_type": "code",
@@ -70,7 +70,7 @@
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 5
   },
   {
    "metadata": {
@@ -117,10 +117,13 @@
    "id": "7d53b0c0ea831d22"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-14T16:43:57.289834Z",
+     "start_time": "2025-06-14T16:43:57.287253Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "def newton(f, J, x0, tol=1.e-8):\n",
     "    max_loops = 1000\n",
@@ -134,13 +137,15 @@
     "        res = np.linalg.norm(f(x))\n",
     "    return x, k"
    ],
-   "id": "17dc7c421a999700"
+   "id": "17dc7c421a999700",
+   "outputs": [],
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-24T14:12:36.207655Z",
-     "start_time": "2025-03-24T14:12:36.204452Z"
+     "end_time": "2025-06-14T16:43:59.269935Z",
+     "start_time": "2025-06-14T16:43:59.266476Z"
     }
    },
    "cell_type": "code",
@@ -162,7 +167,7 @@
      ]
     }
    ],
-   "execution_count": 17
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -171,10 +176,13 @@
    "id": "d460e9820acecdd0"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-14T16:44:01.532002Z",
+     "start_time": "2025-06-14T16:44:01.529440Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "def newton(f, J, x0, tol=1.e-6):\n",
     "    max_loops = 1000\n",
@@ -188,13 +196,15 @@
     "        res = np.linalg.norm(f(x))\n",
     "    return x, k"
    ],
-   "id": "d2cc83b71656ef4"
+   "id": "d2cc83b71656ef4",
+   "outputs": [],
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-24T14:22:02.071846Z",
-     "start_time": "2025-03-24T14:22:02.068546Z"
+     "end_time": "2025-06-14T16:44:03.322117Z",
+     "start_time": "2025-06-14T16:44:03.319556Z"
     }
    },
    "cell_type": "code",
@@ -211,11 +221,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(array([0.32993568, 1.10885755]), 12)\n"
+      "(array([0.32993569, 1.10885756]), 11)\n"
      ]
     }
    ],
-   "execution_count": 22
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -226,8 +236,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-24T14:29:25.882536Z",
-     "start_time": "2025-03-24T14:29:25.880593Z"
+     "end_time": "2025-06-14T16:44:05.475223Z",
+     "start_time": "2025-06-14T16:44:05.472670Z"
     }
    },
    "cell_type": "code",
@@ -237,13 +247,13 @@
    ],
    "id": "3de5b0cac8dcff86",
    "outputs": [],
-   "execution_count": 28
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-24T14:29:23.696521Z",
-     "start_time": "2025-03-24T14:29:23.655168Z"
+     "end_time": "2025-06-14T16:44:07.594776Z",
+     "start_time": "2025-06-14T16:44:07.493677Z"
     }
    },
    "cell_type": "code",
@@ -273,13 +283,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 27
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-24T14:29:45.563594Z",
-     "start_time": "2025-03-24T14:29:45.560616Z"
+     "end_time": "2025-06-14T16:44:27.792372Z",
+     "start_time": "2025-06-14T16:44:27.789800Z"
     }
    },
    "cell_type": "code",
@@ -298,13 +308,13 @@
    ],
    "id": "c443059e4c8f4155",
    "outputs": [],
-   "execution_count": 29
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-24T14:30:26.214964Z",
-     "start_time": "2025-03-24T14:30:26.211417Z"
+     "end_time": "2025-06-14T16:44:31.380024Z",
+     "start_time": "2025-06-14T16:44:31.377518Z"
     }
    },
    "cell_type": "code",
@@ -326,7 +336,7 @@
      ]
     }
    ],
-   "execution_count": 30
+   "execution_count": 13
   }
  ],
  "metadata": {
