--- a/Semester 4/Numerik/W08/V08.ipynb
+++ b/Semester 4/Numerik/W08/V08.ipynb
@@ -11,19 +11,19 @@
    "id": "ac7b47abcad5a7c9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-07T08:24:10.559632Z",
-     "start_time": "2025-04-07T08:24:10.490352Z"
+     "end_time": "2025-06-15T13:57:43.740679Z",
+     "start_time": "2025-06-15T13:57:43.738650Z"
     }
    },
    "source": "import numpy as np",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-07T08:24:10.605091Z",
-     "start_time": "2025-04-07T08:24:10.600577Z"
+     "end_time": "2025-06-15T13:57:43.749700Z",
+     "start_time": "2025-06-15T13:57:43.747102Z"
     }
    },
    "cell_type": "code",
@@ -48,10 +48,15 @@
    ],
    "id": "80947130947fc80e",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 8
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-15T13:57:43.757777Z",
+     "start_time": "2025-06-15T13:57:43.755718Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# Example usage\n",
@@ -61,14 +66,33 @@
     "print('Lösung\\n', x)"
    ],
    "id": "d79808dafc166cf9",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lösung\n",
+      " [[-4.]\n",
+      " [-5.]\n",
+      " [ 3.]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/br/xflg5m_916s1bn1pdq6h9p3w0000gn/T/ipykernel_4755/3327740661.py:10: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  yy[i] = yy[i] - U[i, j] * x[j]\n"
+     ]
+    }
+   ],
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-07T08:43:34.333212Z",
-     "start_time": "2025-04-07T08:43:34.330455Z"
+     "end_time": "2025-06-15T13:57:43.771685Z",
+     "start_time": "2025-06-15T13:57:43.769805Z"
     }
    },
    "cell_type": "code",
@@ -90,13 +114,13 @@
    ],
    "id": "b489f7f27092ec62",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-07T08:43:42.303605Z",
-     "start_time": "2025-04-07T08:43:42.301160Z"
+     "end_time": "2025-06-15T13:57:43.798271Z",
+     "start_time": "2025-06-15T13:57:43.795740Z"
     }
    },
    "cell_type": "code",
@@ -130,7 +154,7 @@
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 11
   }
  ],
  "metadata": {
