--- a/Semester 4/Numerik/W06/V6.ipynb
+++ b/Semester 4/Numerik/W06/V6.ipynb
@@ -12,8 +12,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-03-24T13:19:32.959176Z",
-     "start_time": "2025-03-24T13:19:32.726082Z"
+     "end_time": "2025-06-14T16:37:37.706715Z",
+     "start_time": "2025-06-14T16:37:37.482273Z"
     }
    },
    "source": [
@@ -21,7 +21,7 @@
     "import matplotlib.pyplot as plt"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -77,8 +77,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-24T13:19:38.469685Z",
-     "start_time": "2025-03-24T13:19:38.466893Z"
+     "end_time": "2025-06-14T16:38:22.921128Z",
+     "start_time": "2025-06-14T16:38:22.918131Z"
     }
    },
    "cell_type": "code",
@@ -98,7 +98,7 @@
     "    x = x - d # 2D Newton-Schritt\n",
     "    f = [2*x[0] + 4*x[1], 4*x[0] + 8*x[1]**3] # 2D-f an neuer Stelle x\n",
     "    res = np.linalg.norm(f)\n",
-    "    print('x =', x, 'in', k, 'Schritten' )"
+    "    print(k, ' x =', x)"
    ],
    "id": "2d25a128f4e68d8",
    "outputs": [
@@ -106,14 +106,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x = [-0.00412371  0.00206186] in 1 Schritten\n",
-      "x = [ 3.50622930e-08 -1.75311465e-08] in 2 Schritten\n",
-      "x = [-1.98523347e-23  9.92616735e-24] in 3 Schritten\n",
-      "x = [0. 0.] in 4 Schritten\n"
+      "1  x = [-0.00412371  0.00206186]\n",
+      "2  x = [ 3.50622930e-08 -1.75311465e-08]\n",
+      "3  x = [-1.98523347e-23  9.92616735e-24]\n",
+      "4  x = [0. 0.]\n"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 12
   },
   {
    "metadata": {},
@@ -170,7 +170,12 @@
    "id": "f6db355e62e7965d"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-14T16:42:17.779193Z",
+     "start_time": "2025-06-14T16:42:17.777145Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "def newton(f, J, x0, tol=1.e-10):\n",
@@ -187,13 +192,13 @@
    ],
    "id": "9491edd5e24087d8",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-24T13:53:38.058150Z",
-     "start_time": "2025-03-24T13:53:38.053838Z"
+     "end_time": "2025-06-14T16:42:01.226734Z",
+     "start_time": "2025-06-14T16:42:01.222433Z"
     }
    },
    "cell_type": "code",
@@ -217,7 +222,7 @@
      ]
     }
    ],
-   "execution_count": 47
+   "execution_count": 14
   }
  ],
  "metadata": {
